--- a/Equipe_Leo_07.11.html
+++ b/Equipe_Leo_07.11.html
@@ -21,7 +21,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"  rel="stylesheet">
 </head>
 <body>
     <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
@@ -33,8 +33,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="navbar-brand active" aria-current="page" href="/quem_somos_lya.html">Quem Somos</a>
-              <a class="navbar-brand" href="#">Equipe</a>
-              <a class="navbar-brand" href="#">Eventos</a>
+              <a class="navbar-brand" href="/Equipe_Leo_07.11.html">Equipe</a>
+              <a class="navbar-brand" href="/ibg_eventos.html">Eventos</a>
               <a class="navbar-brand disabled" href="/ibg_contato.html" tabindex="-1" aria-disabled="true">Contato</a>
             </div>
           </div>
