--- a/quem_somos_lya.html
+++ b/quem_somos_lya.html
@@ -32,7 +32,7 @@
         <div class="navbar-nav">
           <a class="navbar-brand active" aria-current="page" href="quem_somos.html">Quem Somos</a>
           <a class="navbar-brand" href="Equipe_Leo_07.11.html">Equipe</a>
-          <a class="navbar-brand" href="#">Eventos</a>
+          <a class="navbar-brand" href="/ibg_eventos.html">Eventos</a>
           <a class="navbar-brand disabled" href="/ibg_contato.html" tabindex="-1" aria-disabled="true">Contato</a>
         </div>
       </div>
