--- a/ibg_eventos.html
+++ b/ibg_eventos.html
@@ -33,7 +33,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="navbar-brand active" aria-current="page" href="/quem_somos_lya.html">Quem Somos</a>
+              <a class="navbar-brand active" aria-current="page" href="../PROJETO_IBG/quem_somos_lya.html">Quem Somos</a>
               <a class="navbar-brand" href="/Equipe_Leo_07.11.html">Equipe</a>
               <a class="navbar-brand" href="/ibg_eventos.html">Eventos</a>
               <a class="navbar-brand disabled" href="/ibg_contato.html" tabindex="-1" aria-disabled="true">Contato</a>
