--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid p-2 ml-3">
-      <a class="navbar-brand" href="#">Inicial</a>
+      <a class="navbar-brand" href="../PROJETO_IBG/index.html">Inicial</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
