--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 <body>
   <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid p-2 ml-3">
-      <a class="navbar-brand" href="../PROJETO_IBG/index.html">Inicial</a>
+      <a class="navbar-brand" href="index.html">Inicial</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="navbar-brand active" aria-current="page" href="../PROJETO_IBG/quem_somos_lya.html">Quem Somos</a>
-          <a class="navbar-brand" href="/Equipe_Leo_07.11.html">Equipe</a>
-          <a class="navbar-brand" href="/ibg_eventos.html">Eventos</a>
-          <a class="navbar-brand disabled" href="/ibg_contato.html" tabindex="-1" aria-disabled="true">Contato</a>
+          <a class="navbar-brand active" aria-current="page" href="quem_somos_lya.html">Quem Somos</a>
+          <a class="navbar-brand" href="Equipe_Leo_07.11.html">Equipe</a>
+          <a class="navbar-brand" href="ibg_eventos.html">Eventos</a>
+          <a class="navbar-brand disabled" href="ibg_contato.html" tabindex="-1" aria-disabled="true">Contato</a>
         </div>
       </div>
     </div>
